docs/source/stylesheets/site.css.scss
@import "partials/_base.scss";
@import "partials/_colors.scss";

body {
  font-family: $font-family;
  color: $font-color; 
  margin: 0px;
  padding: 0px;
}

//////////
//Layout
//////////

//SUSY/Grid layout

#main {
  @include container;
  //@include show-grid;

  section.nav {
    @include full;
  }
  
  section.side_content {
    @include columns(2);
    @include alpha;
  }
  
  section.main_content {
    @include prefix(1);
    @include columns(8);
  }
  
  footer.ephemera {
    @include alpha;
    @include prefix(1);
    @include columns(10);
  }

}

//Header

header.lead {
  background-color: $susy-pink;
  text-align: center;
  @include single-transition(background-color, .5s);
  
  a.home {
    display: block;
    text-decoration: none;  
  }
  
  .logo {
    font-size: 10em;
    padding-top: .05em;
  }
  
  h1 {
    @extend .logo;
    font-size: 2em;
    font-weight: normal; 
    position: absolute;
    top: -99999px;
  }
  
  h2 {
    @extend .logo;
    font-size: 1.5em;
    font-weight: normal;
    font-style: italic; 
    padding-bottom: 1em;
    color: $susy-gray;
    margin: 0;
    padding: 0;
    padding-bottom: 1em;
  }
  
  &:hover {
    background-color: $susy-pink-higlight;
    @include background-image(linear-gradient($susy-pink-higlight, darken($susy-pink-higlight, 7%)));
    
    .logo {
      @include single-text-shadow(white, 0, 0, 10px);
    }
    
    h2 {
      color: white;
      @include single-text-shadow(white, 0, 0, 0px);
      @include single-transition(all, .2s);
    }
  }
  
}

//Top Navigation
section.nav {
  border: 1px lighten($susy-gray, 55%) solid;
  border-top: 0px;
  padding-top: 1em;
  ul {
    text-align: center;
    margin: 0;
    padding: 0;
    margin-bottom: 1em;
    li {
      display: inline;
      margin: 0 0.5em;
    }
  }
  
  &.fixed {
    position: fixed;
    top: 0;
    margin: 0 auto !important;
    width: 61em;
    background-color: white
  }
}

//Content

section.content {
  margin: 1em 0em;
  
  h1, h2, h3, h4, h5, h5 {
    font-family: Caslon, Georgia, serif;
    color: $susy-gray;
    &:first-child {
      margin-top: 0;
    }
  }
  
  img {
    max-width: 100%;
  }
  
  pre {
    padding: 0;
    margin: 0;
    code {
      display: inline-block;
      background-color: lighten($susy-gray, 50%);
      border: 1px lighten($susy-gray, 30%) solid;
      color: $susy-gray;
      padding: 1em;
      max-width: 90%;
      min-width: 90%;  
      padding-top: 0;
      margin-top: 0;
      
    }
  }
}

section.main_content {
  font-size: 1.1em;
}

section.side_content {
  font-size: 0.8em;
}

